--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -114,157 +114,139 @@ leadfinder:
       # =========================
       # NIEDERSACHSEN
       # =========================
-      - Niedersachsen Obsthof Kontakt
-      - Niedersachsen Obsthof Impressum
+      - Niedersachsen Hofladen Kontakt
+      - Niedersachsen Direktvermarkter Kontakt
       - Niedersachsen Spargelhof Kontakt
       - Niedersachsen Erdbeerhof Kontakt
       - Niedersachsen Kartoffelhof Kontakt
       - Niedersachsen Gemüsebau Betrieb Kontakt
       - Niedersachsen Beerenhof Kontakt
-      - Niedersachsen Apfelhof Kontakt
-      - Niedersachsen Hofladen Kontakt
-      - Niedersachsen Direktvermarkter Kontakt
-      - Niedersachsen Bauernhof Ferienhof Kontakt
-      - Niedersachsen Hof Kontakt
+      - Niedersachsen Gewächshausbetrieb Kontakt
+      - Niedersachsen Gemüsebau unter Glas Kontakt
+      - Niedersachsen Tomatenbetrieb Gewächshaus Kontakt
+      - Niedersachsen Gurkenbetrieb Gewächshaus Kontakt
+      - Niedersachsen Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
       # NORDRHEIN-WESTFALEN
       # =========================
-      - Nordrhein-Westfalen Obsthof Kontakt
-      - Nordrhein-Westfalen Obsthof Impressum
+      - Nordrhein-Westfalen Hofladen Kontakt
+      - Nordrhein-Westfalen Direktvermarkter Kontakt
       - Nordrhein-Westfalen Spargelhof Kontakt
       - Nordrhein-Westfalen Erdbeerhof Kontakt
       - Nordrhein-Westfalen Kartoffelhof Kontakt
       - Nordrhein-Westfalen Gemüsebau Betrieb Kontakt
       - Nordrhein-Westfalen Beerenhof Kontakt
-      - Nordrhein-Westfalen Apfelhof Kontakt
-      - Nordrhein-Westfalen Hofladen Kontakt
-      - Nordrhein-Westfalen Direktvermarkter Kontakt
-      - Nordrhein-Westfalen Bauernhof Ferienhof Kontakt
-      - Nordrhein-Westfalen Hof Kontakt
+      - Nordrhein-Westfalen Gewächshausbetrieb Kontakt
+      - Nordrhein-Westfalen Gemüsebau unter Glas Kontakt
+      - Nordrhein-Westfalen Tomatenbetrieb Gewächshaus Kontakt
+      - Nordrhein-Westfalen Gurkenbetrieb Gewächshaus Kontakt
+      - Nordrhein-Westfalen Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
       # BAYERN
       # =========================
-      - Bayern Obsthof Kontakt
-      - Bayern Obsthof Impressum
+      - Bayern Hofladen Kontakt
+      - Bayern Direktvermarkter Kontakt
       - Bayern Spargelhof Kontakt
       - Bayern Erdbeerhof Kontakt
       - Bayern Kartoffelhof Kontakt
       - Bayern Gemüsebau Betrieb Kontakt
       - Bayern Beerenhof Kontakt
-      - Bayern Apfelhof Kontakt
-      - Bayern Hofladen Kontakt
-      - Bayern Direktvermarkter Kontakt
-      - Bayern Bauernhof Ferienhof Kontakt
-      - Bayern Hof Kontakt
+      - Bayern Gewächshausbetrieb Kontakt
+      - Bayern Gemüsebau unter Glas Kontakt
+      - Bayern Tomatenbetrieb Gewächshaus Kontakt
+      - Bayern Gurkenbetrieb Gewächshaus Kontakt
+      - Bayern Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
       # BADEN-WÜRTTEMBERG
       # =========================
-      - Baden-Württemberg Obsthof Kontakt
+      - Baden-Württemberg Hofladen Kontakt
+      - Baden-Württemberg Direktvermarkter Kontakt
       - Baden-Württemberg Spargelhof Kontakt
       - Baden-Württemberg Erdbeerhof Kontakt
       - Baden-Württemberg Kartoffelhof Kontakt
       - Baden-Württemberg Gemüsebau Betrieb Kontakt
       - Baden-Württemberg Beerenhof Kontakt
-      - Baden-Württemberg Apfelhof Kontakt
-      - Baden-Württemberg Hofladen Kontakt
-      - Baden-Württemberg Direktvermarkter Kontakt
-      - Baden-Württemberg Hof Kontakt
+      - Baden-Württemberg Gewächshausbetrieb Kontakt
+      - Baden-Württemberg Gemüsebau unter Glas Kontakt
+      - Baden-Württemberg Tomatenbetrieb Gewächshaus Kontakt
+      - Baden-Württemberg Gurkenbetrieb Gewächshaus Kontakt
+      - Baden-Württemberg Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
       # SCHLESWIG-HOLSTEIN
       # =========================
-      - Schleswig-Holstein Obsthof Kontakt
+      - Schleswig-Holstein Hofladen Kontakt
+      - Schleswig-Holstein Direktvermarkter Kontakt
       - Schleswig-Holstein Spargelhof Kontakt
       - Schleswig-Holstein Erdbeerhof Kontakt
       - Schleswig-Holstein Kartoffelhof Kontakt
       - Schleswig-Holstein Gemüsebau Betrieb Kontakt
       - Schleswig-Holstein Beerenhof Kontakt
-      - Schleswig-Holstein Apfelhof Kontakt
-      - Schleswig-Holstein Hofladen Kontakt
-      - Schleswig-Holstein Direktvermarkter Kontakt
-      - Schleswig-Holstein Hof Kontakt
+      - Schleswig-Holstein Gewächshausbetrieb Kontakt
+      - Schleswig-Holstein Gemüsebau unter Glas Kontakt
+      - Schleswig-Holstein Tomatenbetrieb Gewächshaus Kontakt
+      - Schleswig-Holstein Gurkenbetrieb Gewächshaus Kontakt
+      - Schleswig-Holstein Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
       # MECKLENBURG-VORPOMMERN
       # =========================
-      - Mecklenburg-Vorpommern Obsthof Kontakt
+      - Mecklenburg-Vorpommern Hofladen Kontakt
+      - Mecklenburg-Vorpommern Direktvermarkter Kontakt
       - Mecklenburg-Vorpommern Spargelhof Kontakt
       - Mecklenburg-Vorpommern Erdbeerhof Kontakt
       - Mecklenburg-Vorpommern Kartoffelhof Kontakt
       - Mecklenburg-Vorpommern Gemüsebau Betrieb Kontakt
       - Mecklenburg-Vorpommern Beerenhof Kontakt
-      - Mecklenburg-Vorpommern Apfelhof Kontakt
-      - Mecklenburg-Vorpommern Hofladen Kontakt
-      - Mecklenburg-Vorpommern Direktvermarkter Kontakt
-      - Mecklenburg-Vorpommern Hof Kontakt
+      - Mecklenburg-Vorpommern Gewächshausbetrieb Kontakt
+      - Mecklenburg-Vorpommern Gemüsebau unter Glas Kontakt
+      - Mecklenburg-Vorpommern Tomatenbetrieb Gewächshaus Kontakt
+      - Mecklenburg-Vorpommern Gurkenbetrieb Gewächshaus Kontakt
+      - Mecklenburg-Vorpommern Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
       # BRANDENBURG
       # =========================
-      - Brandenburg Obsthof Kontakt
+      - Brandenburg Hofladen Kontakt
+      - Brandenburg Direktvermarkter Kontakt
       - Brandenburg Spargelhof Kontakt
       - Brandenburg Erdbeerhof Kontakt
       - Brandenburg Kartoffelhof Kontakt
       - Brandenburg Gemüsebau Betrieb Kontakt
       - Brandenburg Beerenhof Kontakt
-      - Brandenburg Apfelhof Kontakt
-      - Brandenburg Hofladen Kontakt
-      - Brandenburg Direktvermarkter Kontakt
-      - Brandenburg Hof Kontakt
+      - Brandenburg Gewächshausbetrieb Kontakt
+      - Brandenburg Gemüsebau unter Glas Kontakt
+      - Brandenburg Tomatenbetrieb Gewächshaus Kontakt
+      - Brandenburg Gurkenbetrieb Gewächshaus Kontakt
+      - Brandenburg Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
       # SACHSEN
       # =========================
-      - Sachsen Obsthof Kontakt
+      - Sachsen Hofladen Kontakt
+      - Sachsen Direktvermarkter Kontakt
       - Sachsen Spargelhof Kontakt
       - Sachsen Erdbeerhof Kontakt
       - Sachsen Kartoffelhof Kontakt
       - Sachsen Gemüsebau Betrieb Kontakt
       - Sachsen Beerenhof Kontakt
-      - Sachsen Hofladen Kontakt
-      - Sachsen Direktvermarkter Kontakt
+      - Sachsen Gewächshausbetrieb Kontakt
+      - Sachsen Gemüsebau unter Glas Kontakt
+      - Sachsen Tomatenbetrieb Gewächshaus Kontakt
+      - Sachsen Gurkenbetrieb Gewächshaus Kontakt
+      - Sachsen Paprikabetrieb Gewächshaus Kontakt
 
       # =========================
-      # GEWÄCHSHAUS / UNTER GLAS
+      # GEWÄCHSHAUS / UNTER GLAS (OGÓLNE, BEZ LANDA)
       # =========================
       - Gewächshausbetrieb Kontakt
       - Gemüsebau unter Glas Betrieb Kontakt
-      - Gemüseproduktion Gewächshausbetrieb Kontakt
-      - Jungpflanzenbetrieb Kontakt
-      - Zierpflanzen Gewächshausbetrieb Kontakt
       - Tomatenbetrieb Gewächshaus Kontakt
       - Gurkenbetrieb Gewächshaus Kontakt
       - Paprikabetrieb Gewächshaus Kontakt
-      - Salatbetrieb Gewächshaus Kontakt
-      - Hydrokultur Gewächshausbetrieb Kontakt
-
-      - Niedersachsen Gewächshausbetrieb Kontakt
-      - Niedersachsen Gemüsebau unter Glas Kontakt
-      - Niedersachsen Jungpflanzenbetrieb Kontakt
-      - Niedersachsen Tomatenbetrieb Gewächshaus Kontakt
-
-      - Nordrhein-Westfalen Gewächshausbetrieb Kontakt
-      - Nordrhein-Westfalen Gemüsebau unter Glas Kontakt
-      - Nordrhein-Westfalen Jungpflanzenbetrieb Kontakt
-      - Nordrhein-Westfalen Tomatenbetrieb Gewächshaus Kontakt
-
-      - Bayern Gewächshausbetrieb Kontakt
-      - Bayern Gemüsebau unter Glas Kontakt
-      - Bayern Jungpflanzenbetrieb Kontakt
-      - Bayern Tomatenbetrieb Gewächshaus Kontakt
-
-      - Baden-Württemberg Gewächshausbetrieb Kontakt
-      - Baden-Württemberg Gemüsebau unter Glas Kontakt
-      - Baden-Württemberg Jungpflanzenbetrieb Kontakt
-      - Baden-Württemberg Tomatenbetrieb Gewächshaus Kontakt
-
-      - Schleswig-Holstein Gewächshausbetrieb Kontakt
-      - Mecklenburg-Vorpommern Gewächshausbetrieb Kontakt
-      - Brandenburg Gewächshausbetrieb Kontakt
-      - Sachsen Gewächshausbetrieb Kontakt
 
 app:
   outreach:
